2007-08-29    <tino@firebird.03.softkill.net>

	* TODO (BUGs): added

	* ptybufferconnect.c (main): option -i added

	* ptybuffer.c (connect_process): bugfix: min was int, not long
	long as needed.  Long running ptybuffers (more than 2 billion IO
	operations) thus were not able to output any data to the socket
	and eat up 100% CPU.
	(ptybuffer_new_fd): I am really not sure what I wanted to do with
	this lines I now disabled.  buf->screenpos must be initialized to
	0 to print the history buffer overrun lines correctly.  However it
	was initizlized to a negative value by these lines if there were
	less than history_tail lines in the buffer.  Perhaps an overrun
	issue or forgotten buggy code before the skipped infoblocks were
	printed?  Problem showed up on 64 bit platforms first, I am really
	puzzled why not before.
	
2007-08-25    <tino@firebird.03.softkill.net>

	* Makefile.tino (DISTCLEAN): cleans for php/ test socket

2007-08-24    <tino@firebird.03.softkill.net>

	* php/.htaccess, php/sock/.htaccess: added

	* php/index.html, php/inp.php, php/out.php, php/startshell.sh:
	added

	* test/stress.sh: Option -p and -o added for tests and names of
	intermediate files changed

	* ptybuffer.c (main): timstamp option added (actually it was
	already there, but the option was missing)
	(file_timestamp): logging changed, on option -o only prefix with
	date and time, not a ':'

2007-06-01    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main): outfile - and logfile - now do work again.
	(main): SIGPIPE now is ignored globally, lools like the previous
	change (form 2007-04-29) was complete crap ..
	(file_open): logfile and outfile are no more written if no
	filename is given on commandline.  As - works again, you
	log/output to stderr/stdout again.
	(file_log): Now has no sideffects on errno.  Errno must not be
	changed by the (new) error logging of the accept() call.

2007-04-29    <tino@firebird.03.softkill.net>
