@@ -2,7 +2,10 @@ daemonize interactive tty line driven programs with output history
 # $Header$
 #
 # $Log$
-# Revision 1.3  2007-08-25 10:31:55  tino
+# Revision 1.4  2007-08-29 21:54:21  tino
+# dist 0.6.0, see ChangeLog
+#
+# Revision 1.3  2007/08/25 10:31:55  tino
 # intermediate dist
 #
 # Revision 1.2  2007/03/04 02:49:18  tino
@@ -34,3 +37,6 @@ If you don't understand this, don't even try it.  It's too dangerous!
 Note: You can use ptybufferconnect to connect to the ptybuffer socket,
 but you can also use a tool like
 <a href="http://freshmeat.net/projects/socat/">socat</a>.
+
+Implementation note: ptybuffer is not able to send lines longer than
+BUFSIZ to the terminal.  This is not true if option -i is used.
