@@ -1,11 +1,6 @@
 -*-text-*-
 $Header$
 
-BUGs:
-
-- Send incomplete line to the pty if client disconnects.  This would
-  enable to send a single ^C without followed by an LF.
-
 Wishlist:
 
 - Support for OOB command to/from client.  This way we perhaps can
@@ -38,7 +33,10 @@ Possibly:
   always be delayed.
 
 $Log$
-Revision 1.4  2007-08-29 20:30:11  tino
+Revision 1.5  2007-08-29 21:54:21  tino
+dist 0.6.0, see ChangeLog
+
+Revision 1.4  2007/08/29 20:30:11  tino
 Bugfix (int -> long long) and ptybufferconnect -i
 
 Revision 1.3  2006/08/11 22:09:07  tino
