@@ -1,1 +1,1 @@
-0.5.12
+0.6.0
